--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
+    "snoowrap": "^1.19.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
