--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
     "snoowrap": "^1.19.0",
-    "styled-components": "^4.4.0",
-    "sweetalert2": "^8.18.0"
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
